[package]
name = "debouncing"
version = "0.1.0"
authors = ["Tyberius Prime <tyberius_prime@coonabibba.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[debouncing]
name = "debouncing"
version = "0.1.0"
authors = [ "Tyberius Prime <tyberius_prime@coonabibba.de>"]
edition = "2018"


[dependencies]
no-std-compat = {version="0.1.0", features=["alloc", ]}
