[package]
name = "debouncing"
version = "0.1.0"
authors = [ "Tyberius Prime <tyberius_prime@coonabibba.de>"]
edition = "2018"
repository = "https://github.com/TyberiusPrime/debouncing"
license = "MIT"
description="Debounce keys in an embedded context"



[dependencies]
no-std-compat = {version="0.4.1", features=["alloc", ]}
